--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <p> Pedagogical practices in the course include student ownership and active participation, activities of searching, sharing and elaborating knowledge, conducting tasks and critical reflection on one's own activity.
-
- The model of instructional design is implemented for systematically determined course contents and delivery methods that follows a logical sequence. Learners activities are predefined and a uniform sequence of instruction is practiced. However, socio-cultural paradigm is focused by utilizing the model of collaborative learning in performing practical tasks and assignments.
-Exam Schedule:
-    </p>
+   <h1> Introduction to HTML5 - Week 39 </h1>
+    <p>HTML5 is the most enhanced and latest version of HTML that is used for structuring and presenting content on the World WIde Web.
+      It is a mark up language. HTML5 incorporates features such as drag and drop and video playback which earlier were dependent on third party 
+      browser plugins such as Adobe Flash or Microsoft Silverlight </p>
   </body>
 </html>
