--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   </head>
   <body>
    <h1> Introduction to HTML5 - Week 39 </h1>
+    <h2> What is HTML5? </h2>
     <p>HTML5 is the most enhanced and latest version of HTML that is used for structuring and presenting content on the World WIde Web.
       It is a mark up language. HTML5 incorporates features such as drag and drop and video playback which earlier were dependent on third party 
       browser plugins such as Adobe Flash or Microsoft Silverlight </p>
+    <h2> New features and browser support </h2>
+    HTML5 has a number of new elements and attribute that can be utilized to build 
+    modern web pages. The modern browsers such as Mozilla Firefox, Opera, Google Chrome,
+   and Safari support HTML5. The built in web browsers available in iPhones, iPads and
+    android phones all have support for HTML5. 
   </body>
 </html>
