--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     HTML5 has a number of new elements and attribute that can be utilized to build 
     modern web pages. The modern browsers such as Mozilla Firefox, Opera, Google Chrome,
    and Safari support HTML5. The built in web browsers available in iPhones, iPads and
-    android phones all have support for HTML5. 
+    android phones all have support for HTML5. Below is a list of the new HTML5 elements: 
+    <ul>
+      <li><b>New Semantic Elements - </b>such as <header> <article> <footer> for better document structure</li>
+        <li><b>New Form Elements - </b> such as <datalist> <keygen> and <output>	
+          </li>
+         <li> <b>New Input Types -</b> such as <color> <email> <url> and attributes such as  
+           <required> <autocomplete> <min and max>
+           </li> 
+             <li> <b>Canvas - </b> HTML5 supports two dimensional drawing surface with the aid of JavaScript. </li>
+              <li> <b>Audio & Video - </b>
+             A video can be easily embedded on web pages without the need of third party plugins.
+             </li>
+              <li><b> Geolocation - </b> It alows uses to share their physical location with web applications. </li>
+             <li> <b>Drag & Drop -  </b> It allows adding drag and drop feature into web pages.</li>
+      </ul>
+       Read More about HTML5 New Elements at https://www.w3schools.com/html/html5_new_elements.asp
   </body>
 </html>
