--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>My Portfolio</title>
+    <title>WWW ja Internet - 2017</title>
   </head>
   <body>
    <h1> Introduction to HTML5 - Week 39 </h1>
