--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
    and Safari support HTML5. The built in web browsers available in iPhones, iPads and
     android phones all have support for HTML5. Below is a list of the new HTML5 elements: 
     <ul>
-      <li><b>New Semantic Elements - </b>such as <header> <article> <footer> for better document structure</li>
-        <li><b>New Form Elements - </b> such as <datalist> <keygen> and <output>	
+      <li><b>New Semantic Elements - </b>such as &lt;header&gt; &lt;article&gt; &lt;footer&gt; for better document structure</li>
+        <li><b>New Form Elements - </b> such as &lt;datalist&gt; &lt;keygen&gt; and &lt;output&gt;	
           </li>
-         <li> <b>New Input Types -</b> such as <color> <email> <url> and attributes such as  
-           <required> <autocomplete> <min and max>
+         <li> <b>New Input Types -</b> such as &lt;color&gt; &lt;email&gt; &lt;url&gt; and attributes such as  
+           &lt;required&gt; &lt;autocomplete&gt; &lt;min and max&gt;
            </li> 
              <li> <b>Canvas - </b> HTML5 supports two dimensional drawing surface with the aid of JavaScript. </li>
               <li> <b>Audio & Video - </b>
