--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
               <li><b> Geolocation - </b> It alows uses to share their physical location with web applications. </li>
              <li> <b>Drag & Drop -  </b> It allows adding drag and drop feature into web pages.</li>
       </ul>
-       Read More about HTML5 New Elements at https://www.w3schools.com/html/html5_new_elements.asp
+       <h3>Read More about HTML5 New Elements at https://www.w3schools.com/html/html5_new_elements.asp </h3>
+    <h2> Creating your own HTML5 page </h2>
+    <script async src="//jsfiddle.net/qnimate/f3umt/1/embed/"></script>
   </body>
 </html>
