--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       </ul>
        <h3>Read More about HTML5 New Elements at https://www.w3schools.com/html/html5_new_elements.asp </h3>
     <h2> Creating your own HTML5 page </h2>
-    <script async src="//jsfiddle.net/qnimate/f3umt/1/embed/"></script>
+    <ol>
+      <li> HTML5 code should begin with specifying the <b> DOCTYPE </b>   </li>
+      <li> The character encoding cha be specified by using the meta tag <li>
+     </ol>
+
+  <p><img src=images/capture.png></p>
   </body>
 </html>
