--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
       <li> The character encoding cha be specified by using the meta tag <li>
      </ol>
 
-  <p><img src=images/capture.png></p>
+  <p><img src=images/Capture.png></p>
   </body>
 </html>
