--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <h2> Creating your own HTML5 page </h2>
     <ol>
       <li> HTML5 code should begin with specifying the <b> DOCTYPE </b>   </li>
-      <li> The character encoding cha be specified by using the meta tag <li>
+      <li> The character encoding cha be specified by using the meta tag </li>
      </ol>
 
-  <p><img src=images/Capture.png></p>
+  <p><img src=images/Capture.PNG></p>
   </body>
 </html>
