--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
     <ol>
       <li> HTML5 code should begin with specifying the <b> DOCTYPE </b>   </li>
       <li> The character encoding cha be specified by using the meta tag </li>
+      <p><img src=images/Capture.PNG></p>
+      <li> Save the file with extension .html for example index.html </li>
+      <li>Web browsers ignore spaces and carraige returns in your html code </li>
      </ol>
-
-  <p><img src=images/Capture.PNG></p>
+ <h2> Naming HTML Files </h2>
+    <ol>
+    <li> Select names that meaningfully describes the file's contents such as
+      contactus.html, about.html. </li>
+      <li> Avoid spaces in your filesnames as browsers replace spaces in your filename
+        with characters %20 that can confuse users </li>
+    </ol>
   </body>
 </html>
