--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
       <li> Avoid spaces in your filesnames as browsers replace spaces in your filename
         with characters %20 that can confuse users </li>
     </ol>
+    <h2> Video Tutorial : HTML Documents, HTML Headings, HTML Paragraphs, HTML Links, 
+      HTML Images, HTML Elements </h2> 
   </body>
 </html>
