--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!DOCTYPE html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <html>
   <head>
     <title>WWW ja Internet - 2017</title>
+    <link href="CSS/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div id="header">
+      This is my header
+      </div>
    <h1> Introduction to HTML5 - Week 39 </h1>
     <h2> What is HTML5? </h2>
     <p>HTML5 is the most enhanced and latest version of HTML that is used for structuring and presenting content on the World WIde Web.
