--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <html>
   <head>
     <title>WWW ja Internet - 2017</title>
-    <link href="CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="www_dkc/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id="header">
-      This is my header
-      </div>
+    <div id="wrap">     
+      <div id="topbar">
+  <div id="menus">
+  <ul id="topmenu">
+<li  class="active"><a href="#">Home</a>
+</li>
+<li><a onclick="changecolor()">Change BG</a></span>
+</li>
+<li><a href="#">Services</a>
+</li>
+<li><a href="#">products</a>
+</li>
+<li><a href="#">Services</a>
+</li>
+</ul>
+</div>
+</div>
+<div id="content">
+<div id="mainpage">
    <h1> Introduction to HTML5 - Week 39 </h1>
     <h2> What is HTML5? </h2>
     <p>HTML5 is the most enhanced and latest version of HTML that is used for structuring and presenting content on the World WIde Web.
@@ -51,5 +67,8 @@
     </ol>
     <h2> Video Tutorial : HTML Documents, HTML Headings, HTML Paragraphs, HTML Links, 
       HTML Images, HTML Elements </h2> 
+  </div>
+  </div>
+    </div>
   </body>
 </html>
