--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 </ul>
 </div>
 </div>
+  <div id="header">
+    
+</div>
+
 <div id="content">
 <div id="mainpage">
    <h1> Introduction to HTML5 - Week 39 </h1>
