--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
       HTML Images, HTML Elements </h2> 
   </div>
   </div>
+  <div id="footer">
+<p>Copyright &copy;
+<script type="text/javascript">var ct=new Date(); document.write(ct.getFullYear());</script>
+</p>
+  </div>
     </div>
   </body>
 </html>
