--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </li>
 <li><a onclick="changecolor()">Change BG</a></span>
 </li>
-<li><a href="#">Services</a>
+<li><a href="#services">Services</a>
 </li>
 <li><a href="#">products</a>
 </li>
@@ -62,7 +62,7 @@
       <li> Save the file with extension .html for example index.html </li>
       <li>Web browsers ignore spaces and carraige returns in your html code </li>
      </ol>
- <h2> Naming HTML Files </h2>
+ <h2 id="services"> Naming HTML Files </h2>
     <ol>
     <li> Select names that meaningfully describes the file's contents such as
       contactus.html, about.html. </li>
