--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
              <li> <b>Drag & Drop -  </b> It allows adding drag and drop feature into web pages.</li>
       </ul>
        <h3>Read More about HTML5 New Elements at https://www.w3schools.com/html/html5_new_elements.asp </h3>
-    <h2> Creating your own HTML5 page </h2>
+    <h2 id="services"> Creating your own HTML5 page </h2>
     <ol>
       <li> HTML5 code should begin with specifying the <b> DOCTYPE </b>   </li>
       <li> The character encoding cha be specified by using the meta tag </li>
@@ -62,7 +62,7 @@
       <li> Save the file with extension .html for example index.html </li>
       <li>Web browsers ignore spaces and carraige returns in your html code </li>
      </ol>
- <h2 id="services"> Naming HTML Files </h2>
+ <h2 > Naming HTML Files </h2>
     <ol>
     <li> Select names that meaningfully describes the file's contents such as
       contactus.html, about.html. </li>
