--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </li>
 <li><a onclick="changecolor()">Change BG</a></span>
 </li>
-<li><a href="#services">Services</a>
+<li><a href="#create">Create HTML5</a>
 </li>
-<li><a href="#">products</a>
+<li><a href="#">Products</a>
 </li>
-<li><a href="#">Services</a>
+<li><a href="#contactus">Contact Us</a>
 </li>
 </ul>
 </div>
@@ -54,7 +54,7 @@
              <li> <b>Drag & Drop -  </b> It allows adding drag and drop feature into web pages.</li>
       </ul>
        <h3>Read More about HTML5 New Elements at https://www.w3schools.com/html/html5_new_elements.asp </h3>
-    <h2 id="services"> Creating your own HTML5 page </h2>
+    <h2 id="create"> Creating your own HTML5 page </h2>
     <ol>
       <li> HTML5 code should begin with specifying the <b> DOCTYPE </b>   </li>
       <li> The character encoding cha be specified by using the meta tag </li>
@@ -71,6 +71,8 @@
     </ol>
     <h2> Video Tutorial : HTML Documents, HTML Headings, HTML Paragraphs, HTML Links, 
       HTML Images, HTML Elements </h2> 
+  
+  <h2 id="contactus"> Contact Us </h2>
   </div>
   </div>
   <div id="footer">
