--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <ul id="topmenu">
 <li  class="active"><a href="#">Home</a>
 </li>
-<li><a onclick="changecolor()">BG</a></span>
+<li><a href="#table">Table</a></span>
 </li>
 <li><a href="#create">HTML5</a>
 </li>
@@ -71,6 +71,14 @@
     </ol>
     <h2> Video Tutorial : HTML Documents, HTML Headings, HTML Paragraphs, HTML Links, 
       HTML Images, HTML Elements </h2> 
+  <h2 id="table"> How to make table in html pages? </h2>
+  
+  <table>
+    <tr>
+      <td> Column one </td>
+      <td> Column two </td>
+      </tr>
+    </table>
   
   <h2 id="contactus"> Contact Us </h2>
   </div>
