--- a/index.html
+++ b/index.html
@@ -73,11 +73,22 @@
       HTML Images, HTML Elements </h2> 
   <h2 id="table"> How to make table in html pages? </h2>
   
-  <table>
+  <table style="width:100%">
     <tr>
-      <td> Column one </td>
-      <td> Column two </td>
+      <th> First Name </th>
+      <th>Last Name </th>
+      <th> Age </th>
       </tr>
+    <tr>
+      <td> Will </td>
+      <td> Smith </td>
+      <td> 50 </td>
+    </tr>
+      <tr>
+      <td> John </td>
+      <td> Henrikson </td>
+      <td> 20 </td>
+    </tr>
     </table>
   
   <h2 id="contactus"> Contact Us </h2>
