--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       HTML Images, HTML Elements </h2> 
   <h2 id="table"> How to make table in html pages? </h2>
   
-  <table style="width:100%">
+  <table>
     <tr>
       <th> First Name </th>
       <th>Last Name </th>
