--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   
   <table>
     <tr>
-      <th> First Name </th>
-      <th>Last Name </th>
+      <th colspan="2"> Name </th>
+   
       <th> Age </th>
       </tr>
     <tr>
