--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
     </table>
   
   <h2 id="contactus"> Contact Us </h2>
+  <form>
+    <input type="text" name="fname" > First Name: <br>
+    <input type="text" name="lname"> Last Name: <br>
+    <input type="submit" value="Submit">
+    </form>
   </div>
   </div>
   <div id="footer">
