--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
   
   <h2 id="contactus"> Contact Us </h2>
   <form>
-    <input type="text" name="fname" > First Name: <br>
-    <input type="text" name="lname"> Last Name: <br>
+    First Name: <br> <input type="text" name="fname" >
+     Last Name: <br><input type="text" name="lname">
     <input type="submit" value="Submit">
     </form>
   </div>
