--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
   <form>
     First Name: <br> <input type="text" name="fname" >
      Last Name: <br><input type="text" name="lname">
+    Gender: <input type="radio" name="gender" value="male" checked> Male <br>
+    <input type="radio" name="gender" value="female" > Female <br>
+    <input type="radio" name="gender" value="other" > Other <br>
     <input type="submit" value="Submit">
     </form>
   </div>
