--- a/index.html
+++ b/index.html
@@ -93,11 +93,13 @@
   
   <h2 id="contactus"> Contact Us </h2>
   <form>
-    First Name: <br> <input type="text" name="fname" >
-     Last Name: <br><input type="text" name="lname">
+    First Name: <input type="text" name="fname" > <br>
+     Last Name: <input type="text" name="lname"><br>
     Gender: <input type="radio" name="gender" value="male" checked> Male <br>
     <input type="radio" name="gender" value="female" > Female <br>
     <input type="radio" name="gender" value="other" > Other <br>
+     E-mail:<input type="email" name="email"> <br>
+    
     <input type="submit" value="Submit">
     </form>
   </div>
