--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
     <input type="radio" name="gender" value="other" > Other <br>
      E-mail:<input type="email" name="email"> <br>
     
+ Salutation: <select name=“salutation”>
+<option>Dr</option>
+<option>Mr</option>
+<option>Mrs</option>
+<option>Miss</option>
+<option>Ms</option>
+</select>
+<br/><br/>
+Favorite Sport: <select name=“sport”>
+<option>Baseball</option>
+<option>Basketball</option>
+<option>Football</option>
+<option>Hockey</option>
     <input type="submit" value="Submit">
     </form>
   </div>
