--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
   <head>
     <title>WWW ja Internet - 2017</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script>
+function validateForm()
+{
+if (document.forms["myForm"]["name"].value==null || document.forms["myForm"]["name"].value=="")
+{
+alert("Name must be filled out");
+return false;
+}
+if (document.forms["myForm"]["phone"].value==null || document.forms["myForm"]["phone"].value=="")
+{
+alert("Phone must be filled out");
+return false;
+}
+if (document.forms["myForm"]["email"].value==null || document.forms["myForm"]["email"].value=="")
+{
+alert("Email must be filled out");
+return false;
+}
+return true;
+}
+</script>
   </head>
   <body>
     <div id="wrap">     
@@ -115,6 +136,17 @@ Favorite Sport: <select name=“sport”>
 <option>Hockey</option>
     <input type="submit" value="Submit">
     </form>
+    <h2>Form Validation Example</h2>
+    
+
+<form name="myForm" onsubmit="return validateForm()" >
+Name: <input type="text" name="name" /><br/>
+Phone: <input type="text" name="phone" /><br/>
+E-mail: <input type="text" name="email" /><br/>
+<input type="submit" value="Click to Submit" />
+</form>
+</body>
+</html>
   </div>
   </div>
   <div id="footer">
