--- a/index.html
+++ b/index.html
@@ -145,8 +145,11 @@ Phone: <input type="text" name="phone" /><br/>
 E-mail: <input type="text" name="email" /><br/>
 <input type="submit" value="Click to Submit" />
 </form>
-</body>
-</html>
+<h2>Integrating video into your web page</h2>
+    <video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
   </div>
   </div>
   <div id="footer">
