--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@ E-mail: <input type="text" name="email" /><br/>
   <source src="movie.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
+    <h2> Integrating youtube video into your web page </h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/b6hRyQMBbE8?rel=0" frameborder="0" allowfullscreen></iframe>
   </div>
   </div>
   <div id="footer">
